# iCub-workshop-tutorials

./: CMakeLists.txt  README.md
iCub-workshop-tutorials/: CMakeLists.txt
iCub-workshop-tutorials/src/: CMakeLists.txt
iCub-workshop-tutorials/src/Alex/motorTutorial/src/: motorTutorial.cpp
iCub-workshop-tutorials/src/rpc/: CMakeLists.txt
iCub-workshop-tutorials/src/rpc/rpctutorial/: CMakeLists.txt  rpctutorial.thrift  rpctutorial_thrift.cmake
iCub-workshop-tutorials/src/rpc/rpctutorial/include/: rpcThread.h  rpcmodule.h  rpctutorial_IDLserver.h
iCub-workshop-tutorials/src/rpc/rpctutorial/src/: rpctutorialMain.cpp  rpctutorialModule.cpp  rpctutorialThread.cpp  rpctutorial_IDLserver.cpp
src/: CMakeLists.txt
src/Alex/: CMakeLists.txt
src/Alex/motorTutorial/: CMakeLists.txt
src/Alex/motorTutorial/src/: motorTutorial.cpp
